updated to the tools

--- a/.planning/phases/45-editor-ui-and-scoring/45-01-PLAN.md
+++ b/.planning/phases/45-editor-ui-and-scoring/45-01-PLAN.md
@@ -10,7 +10,18 @@ files_modified:
   - src/lib/tools/k8s-analyzer/url-state.ts
   - src/lib/tools/k8s-analyzer/badge-generator.ts
   - src/lib/tools/k8s-analyzer/use-codemirror-k8s.ts
+  - src/lib/tools/k8s-analyzer/types.ts
 autonomous: true
+requirements:
+  - SCORE-01
+  - SCORE-02
+  - SCORE-03
+  - UI-01
+  - UI-04
+  - UI-13
+  - UI-14
+  - SHARE-01
+  - SHARE-02
 
 must_haves:
   truths:
@@ -88,10 +99,13 @@ Output: 5 new TypeScript modules in src/stores/ and src/lib/tools/k8s-analyzer/
 <task type="auto">
   <name>Task 1: Create nanostore atoms and K8s category-weighted scorer</name>
   <files>
+    src/lib/tools/k8s-analyzer/types.ts
     src/stores/k8sAnalyzerStore.ts
     src/lib/tools/k8s-analyzer/scorer.ts
   </files>
   <action>
+**types.ts** — Add `pssCompliance` field to `K8sAnalysisResult` interface. Add `pssCompliance?: PssComplianceSummary;` after the `resourceSummary` field. This ensures Plan 02's K8sEditorPanel can include `pssCompliance: engineResult.pssCompliance` in the `k8sResult.set()` call, and Plan 03's K8sResultsPanel can read `result.pssCompliance` without a type error.
+
 **k8sAnalyzerStore.ts** — Fork `src/stores/composeValidatorStore.ts` exactly. Replace all `compose` prefixes with `k8s`. Import `K8sAnalysisResult` from `../lib/tools/k8s-analyzer/types`. Four atoms:
 - `k8sResult: atom<K8sAnalysisResult | null>(null)`
 - `k8sAnalyzing: atom<boolean>(false)`
